added if else for dot selection

--- a/index.html
+++ b/index.html
@@ -21,10 +21,8 @@
                     <i class="fas fa-angle-right"></i>
                 </div>
                 <div class="nav">
-                    <i class="fas fa-circle active first"></i>
-                    <i class="fas fa-circle"></i>
-                    <i class="fas fa-circle"></i>
-                    <i class="fas fa-circle last"></i>
+                    <i v-for="(item, index) in imagesList" :class="activeDot(index)" @click="clickedDot(index)"></i>
+
                 </div>
             </div>
 
